fix: rm body to listPost fix: type_id -> type_name on listPost
