# microservice/gateway/docs/swagger.json
@@ -188,6 +188,13 @@
                         "name": "comment_id",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "token 用户令牌",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -428,9 +435,9 @@
                 }
             }
         },
-        "/post/list": {
+        "/post/list/{type_name}/main/{category_id}": {
             "get": {
-                "description": "type_id = 1 -\u003e 团队内 (type_id暂时均填0); 根据category获取主贴list",
+                "description": "type_name = normal -\u003e 团队内 (type_name暂时均填normal); 根据category获取主贴list(前端实现category的映射)",
                 "consumes": [
                     "application/json"
                 ],
@@ -461,13 +468,18 @@
                         "in": "query"
                     },
                     {
-                        "description": "list_main_post_request",
-                        "name": "object",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/post.ListMainPostRequest"
-                        }
+                        "type": "string",
+                        "description": "type_name",
+                        "name": "type_name",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "category_id",
+                        "name": "category_id",
+                        "in": "path",
+                        "required": true
                     },
                     {
                         "type": "string",
@@ -487,9 +499,9 @@
                 }
             }
         },
-        "/post/list/{main_post_id}": {
+        "/post/list/{type_name}/{main_post_id}": {
             "get": {
-                "description": "type_id = 1 -\u003e 团队内 (type_id暂时均填0); 根据 main_post_id 获取主贴的从贴list",
+                "description": "type_name = normal -\u003e 团队内 (type_name暂时均填normal); 根据 main_post_id 获取主贴的从贴list",
                 "consumes": [
                     "application/json"
                 ],
@@ -520,20 +532,18 @@
                         "in": "query"
                     },
                     {
+                        "type": "string",
+                        "description": "type_name",
+                        "name": "type_name",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
                         "type": "integer",
                         "description": "main_post_id",
                         "name": "main_post_id",
                         "in": "path",
                         "required": true
-                    },
-                    {
-                        "description": "list_sub_post_request",
-                        "name": "object",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/post.ListSubPostRequest"
-                        }
                     },
                     {
                         "type": "string",
@@ -964,17 +974,6 @@
                 }
             }
         },
-        "post.ListMainPostRequest": {
-            "type": "object",
-            "properties": {
-                "category_id": {
-                    "type": "integer"
-                },
-                "type_id": {
-                    "type": "integer"
-                }
-            }
-        },
         "post.ListResponse": {
             "type": "object",
             "properties": {
@@ -983,17 +982,6 @@
                     "items": {
                         "$ref": "#/definitions/post.Post"
                     }
-                }
-            }
-        },
-        "post.ListSubPostRequest": {
-            "type": "object",
-            "properties": {
-                "main_post_id": {
-                    "type": "integer"
-                },
-                "type_id": {
-                    "type": "integer"
                 }
             }
         },
